--- a/src/pages/image-list/image-list.html
+++ b/src/pages/image-list/image-list.html
@@ -1,11 +1,12 @@
 <!--
   Generated template for the ImageListPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
+  See http://ionicframework.com/docs/compo
+  nents/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
+<ion-header>
   <ion-navbar>
     <ion-title text-center>FaceRecognition</ion-title>
   </ion-navbar>
@@ -13,18 +14,24 @@
 </ion-header>
 
 
-<ion-content padding>
-<ion-card-content>
+<ion-content>
   <ion-list>
 
     <ion-list-header text-center>
       Image List
     </ion-list-header>
-    <ion-item *ngFor="let p of response" text-center>
-      {{p}}
+    
+    <ion-item *ngFor="let p of getListNamesResponse">
+      <ion-label>{{p}}</ion-label>
+      <ion-checkbox [(ngModel)]="checkList[p]" color="danger"></ion-checkbox>
     </ion-item>
 
   </ion-list>
 
-</ion-card-content>
+  <div text-center>
+    <button *ngIf="getListNamesResponse" ion-button icon-end color="danger" center (click)="deleteSelectedPersons()">
+      Delete marked persons
+    <ion-icon name="trash"></ion-icon>
+    </button>
+  </div>
 </ion-content>
