Refactoring home.ts

--- a/src/pages/image-list/image-list.html
+++ b/src/pages/image-list/image-list.html
@@ -18,7 +18,7 @@
   <ion-list>
 
     <ion-list-header text-center>
-      Image List
+      Images List
     </ion-list-header>
     
     <ion-item *ngFor="let p of getListNamesResponse">
