--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -7,5 +7,5 @@
 <ion-tabs>
   <ion-tab [root]="home" tabTitle="Recognize image" tabIcon=""></ion-tab>
   <ion-tab [root]="addImage" tabTitle="Add image" tabIcon=""></ion-tab>
-  <ion-tab [root]="imageList" tabTitle="Image List"></ion-tab>
+  <ion-tab [root]="imageList" tabTitle="Images List"></ion-tab>
 </ion-tabs>
